--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101160197);</script>
+<script async src="//static.getclicky.com/js"></script>
   <meta charset="utf-8">
   <title>NODDLA | The Sound Kit For Insomniacs </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
