--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div>Go ahead. Try it, it's free!</div><br>
                     <div style="text-align: center;">
-          <button type="button" class="btn btn-warning btn-lg ">TRY NODDLA NOW</button>
+			   <a href="https://noddlabasic.herokuapp.com/"> <button type="button" class="btn btn-warning btn-lg ">TRY NODDLA NOW</button></a>
 </div>
 <br>
             <p style="color: navy"><b>P.S.  ...to use Noddla, you'll need a laptop (or desktop) to play on, & headphones (or earbuds) to listen through...</b></p>
