--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h2><b>Can delta waves<br/>
 					really relax your brain?</b></h2>
          <p>Find out with NODDLA, a web app/instrument that allows you create melodies on your laptop, while absorbing the 2.5hz binaural beats underneath. This "delta" frequency is associated with deep sleep, as well as improved memory, recovery, and pain control. </p>
-         <p> The concept of binaural beats is based on an auditory illusion, created when an individual hears two seperate soundwaves through headphones (one soundwave through each ear) and the brain subsequently percieves a third soundwave based on the mathematical difference between the two waves & proceeds to "follow" that soundwave. Binaural beats were first discovered in 1839 by Heineich Wilhem Dove.</p><p> NODDLA: The Ultimate Lullabye Experience.</p>
+         <p> The concept of binaural beats(discovered in 1839 by Heineich Wilhem Dove) is based on an auditory illusion, created when an individual hears two seperate soundwaves through headphones, and the brain then 'hears' a third soundwave based on the difference between the two waves. Manipulation of this third soundwave's frequency results in the binaural beat effect-which has been studied extensively for centuries.  Noddla is a product of that voluminous body of research. Enjoy. </p><p> NODDLA: The Ultimate Lullabye Experience.</p>
 
 
             <div>Go ahead. Try it, it's free!</div><br>
@@ -101,7 +101,7 @@
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyright 2018 <strong>KWILLSOFTWARE.COM</strong>. All Rights Reserved
+        &copy; Copyright 2018 <strong>PIVOTAL AUDIO INSTRUMENTS& KWILL SOFTWARE</strong>. All Rights Reserved
       </p>
       <div class="credits">
     
