--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			   <a href="https://noddlabasic.herokuapp.com/"> <button type="button" class="btn btn-warning btn-lg ">TRY NODDLA NOW</button></a>
 </div>
 <br>
-            <p style="color: navy"><b>P.S.  ...to use Noddla, you'll need a laptop (or desktop) to play on, & headphones (or earbuds) to listen through. Mobile users can use one of <a href="https://amzn.to/2VnhSql" >these.</a></b></p>
+            <p style="color: navy"><b>P.S.  ...to use Noddla, you'll need a laptop (or desktop) to play on, & headphones (or earbuds) to listen through. Mobile users can use one of <span style="color:white";><a href="https://amzn.to/2VnhSql" >these.</a></span></b></p>
           
 
             <p>a <span style="font-family: 'Righteous', cursive; font-size: 46px; color: #2f3dfa;"><a href="https://pivotalinstruments.ga/"><a>PAI</a></span>product</p> 
