--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p style="color: navy"><b>P.S.  ...to use Noddla, you'll need a laptop (or desktop) to play on, & headphones (or earbuds) to listen through. Mobile users can use one of <span style="color:white";><a href="https://amzn.to/2VnhSql" >these.</a></span></b></p>
           
 
-            <p>a <span style="font-family: 'Righteous', cursive; font-size: 46px; color: #2f3dfa;"><a href="https://pivotalinstruments.ga/"><a>PAI</a></span>product</p> 
+            <p>a <span style="font-family: 'Righteous', cursive; font-size: 46px; color: #2f3dfa;"><a href="https://pivotalinstruments.ga/">a PAI</a></span>product</p> 
    </div><br>
 <p style="text-align: center;">Legal Disclaimer: In accordance with US law, Noddla does not claim to diagnose, treat, or cure any medical disease, illness, or condition.
 </p>
