--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@ for (i = 0; i < coll.length; i++) {
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyright 2018 <strong>KWILLSOFTWARE.COM</strong>. All Rights Reserved
+        &copy; <script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script>,noddla.ga. All Rights Reserved
       </p>
       <div class="credits">
     
