--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ for (i = 0; i < coll.length; i++) {
             <p style="color: navy"><b>P.S.  ...to use Noddla, you'll need a laptop (or desktop) to play on, & headphones (or earbuds) to listen through...</b></p>
           
 
-            <p>a <span style="font-family: 'Righteous', cursive; font-size: 46px; color: #2f3dfa;"><a href="https://pivotalinstruments.ga/"><a>PAI</a></span>product</p> 
+            <p>a <span style="font-family: 'Righteous', cursive; font-size: 46px; color: #2f3dfa;"><a href="https://kwillsoftware.com/"><a>KWILL SOFTWARE </a></span>product</p> 
    <br>
 <p style="text-align: center;">Legal Disclaimer: In accordance with US law, Noddla does not claim to diagnose, treat, or cure any medical disease, illness, or condition.
 </p>
