--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@ for (i = 0; i < coll.length; i++) {
             <p style="color: navy"><b>P.S.  ...to use Noddla, you'll need a laptop (or desktop) to play on, & headphones (or earbuds) to listen through...</b></p>
           
 
-            <p>a <span ><a style="font-family: 'Righteous', cursive; font-size: 18px; color: #2f3dfa;" href="https://kwillsoftware.com"><a>KWILL SOFTWARE </a></span>product.</p> 
+ 
    <br>
 <p style="text-align: center;">Legal Disclaimer: In accordance with US law, Noddla does not claim to diagnose, treat, or cure any medical disease, illness, or condition.
 </p>
+	   <br>
 
-
+            <p>a <span style="font-family: 'Righteous', cursive; font-size: 18px !important; color: #2f3dfa;" ><a  href="https://kwillsoftware.com"><a>KWILL SOFTWARE </a></span>product.</p>
 
 
 
