--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ for (i = 0; i < coll.length; i++) {
 </p>
 	   <br>
 
-            <p>a <span style="font-family: 'Righteous', cursive; font-size: 18px !important; color: #2f3dfa;" ><a  href="https://kwillsoftware.com"><a>KWILL SOFTWARE </a></span>product.</p>
+            <p>a <span style="font-family: 'Righteous', cursive; font-size: 18px !important; color: #2f3dfa;" ><a  href="https://kwillsoftware.com">KWILL SOFTWARE </a></span>product.</p>
 
 
 
