--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@ for (i = 0; i < coll.length; i++) {
 <br>
             <p style="color: navy"><b>P.S.  ...to use Noddla, you'll need a laptop (or desktop) to play on, & headphones (or earbuds) to listen through...</b></p>
           
-
+         <p>a <span style="font-family: 'Righteous', cursive; font-size: 18px !important; color: #2f3dfa;" ><a  href="https://kwillsoftware.com">KWILL SOFTWARE </a></span>product.</p> <br>
  
    <br>
 <p style="text-align: center;">Legal Disclaimer: In accordance with US law, Noddla does not claim to diagnose, treat, or cure any medical disease, illness, or condition.
 </p>
 	   <br>
 
-            <p>a <span style="font-family: 'Righteous', cursive; font-size: 18px !important; color: #2f3dfa;" ><a  href="https://kwillsoftware.com">KWILL SOFTWARE </a></span>product.</p>
+   
 
 
 
