--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ for (i = 0; i < coll.length; i++) {
 <p style="text-align: center;">Legal Disclaimer: In accordance with US law, Noddla does not claim to diagnose, treat, or cure any medical disease, illness, or condition.
 </p>
 	   <br>
-	 <p>a <span style="font-family: 'Righteous', cursive; font-size: 20px; color: #2f3dfa;"><a href="https://kwillsoftware.com/">KWILL SOFTWARE </a></span>product</p> 
+	 <p>a <span style="font-family: 'Righteous', cursive; font-size: 20px; color: #2f3dfa;">
+		 <a href="https://kwillsoftware.com/">KWILL SOFTWARE </a></span>product</p> 
 	   <br>
 
    
