--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@ for (i = 0; i < coll.length; i++) {
        <div class="col-xs-12 col-lg-6">
           <img class="img-responsive" src="img/brain.png" alt="" width="80%" >
         </div>
+	    <br><br>
+	    <script type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_search_bar = "false";
+amzn_assoc_tracking_id = "noddla-20";
+amzn_assoc_ad_mode = "manual";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_title = "";
+amzn_assoc_linkid = "78954a3a832789b45dd4a1c47e61b2f3";
+amzn_assoc_asins = "B00QBZ25R4,B01NH0XWNU,B00PBD3NU0,B006L9VANK";
+</script>
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
       <!-- /row -->
     </div>
     <!-- /container -->
