--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ amzn_assoc_region = "US";
 amzn_assoc_title = "";
 amzn_assoc_linkid = "78954a3a832789b45dd4a1c47e61b2f3";
 amzn_assoc_asins = "B00QBZ25R4,B01NH0XWNU,B00PBD3NU0,B006L9VANK";
-amzn_assoc_size = "300xauto";
+amzn_assoc_size = "300pxauto";
 </script>
 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
     </div>
