--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@ for (i = 0; i < coll.length; i++) {
 	 <p>a <span style="font-family: 'Righteous', cursive; font-size: 20px; color: #2f3dfa;">
 		 <a href="https://kwillsoftware.com/">KWILL SOFTWARE </a></span>product</p> 
 	   <br>
+	<script type="text/javascript">
+amzn_assoc_placement = "adunit0";
+amzn_assoc_search_bar = "false";
+amzn_assoc_tracking_id = "noddla-20";
+amzn_assoc_ad_mode = "manual";
+amzn_assoc_ad_type = "smart";
+amzn_assoc_marketplace = "amazon";
+amzn_assoc_region = "US";
+amzn_assoc_title = "";
+amzn_assoc_linkid = "d3f452101c90673b85a84f134e742a5b";
+amzn_assoc_asins = "B01NH0XWNU,B012JEUB30,B003XVO0TK,B07L4QXTCS";
+</script>
 
    
 
