--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ for (i = 0; i < coll.length; i++) {
 	 <p>a <span style="font-family: 'Righteous', cursive; font-size: 20px; color: #2f3dfa;">
 		 <a href="https://kwillsoftware.com/">KWILL SOFTWARE </a></span>product</p> 
 	   <br>
-							<script type="text/javascript">
+<script type="text/javascript">
 amzn_assoc_placement = "adunit0";
 amzn_assoc_search_bar = "false";
 amzn_assoc_tracking_id = "noddla-20";
@@ -101,6 +101,7 @@ amzn_assoc_title = "";
 amzn_assoc_linkid = "d3f452101c90673b85a84f134e742a5b";
 amzn_assoc_asins = "B01NH0XWNU,B012JEUB30,B003XVO0TK,B07L4QXTCS";
 </script>
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 						
           </div></div>
 
@@ -133,7 +134,7 @@ amzn_assoc_asins = "B01NH0XWNU,B012JEUB30,B003XVO0TK,B07L4QXTCS";
 	 <p>a <span style="font-family: 'Righteous', cursive; font-size: 20px; color: #2f3dfa;">
 		 <a href="https://kwillsoftware.com/">KWILL SOFTWARE </a></span>product</p> 
 	   <br>
-	<script type="text/javascript">
+<script type="text/javascript">
 amzn_assoc_placement = "adunit0";
 amzn_assoc_search_bar = "false";
 amzn_assoc_tracking_id = "noddla-20";
@@ -145,7 +146,7 @@ amzn_assoc_title = "";
 amzn_assoc_linkid = "d3f452101c90673b85a84f134e742a5b";
 amzn_assoc_asins = "B01NH0XWNU,B012JEUB30,B003XVO0TK,B07L4QXTCS";
 </script>
-
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
    
 
 
